# sbmlcore

./: .gitignore  LICENSE  README.md  StructuralFeatures_test.ipynb  StructuralFeatures_test_RNAP.ipynb  StructuralFeatures_test_pncA.ipynb  StructuralFeatures_tests_RNAP.ipynb  StructuralFeatures_userexample_RNAP.ipynb  Untitled.ipynb  addition_methods_walkthrough.ipynb  csv_segid_concat.ipynb  externalcode_tests.ipynb  freesasa_andSNAP2_examples.ipynb  freesasa_example.ipynb  freesasa_examples.ipynb  freesasa_tests.ipynb  freesasa_tests_RNAP.ipynb  freesasa_tests_pncA.ipynb  mdanalysis-tests-RNAP.ipynb  mdanalysis-tests-pncA.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  snap2_tests.ipynb  trajectory_distances_playbook.ipynb  trajectory_playbook.ipynb  walkthrough.ipynb
.github/workflows/: codecov.yaml  pypi.yaml  tests.yaml
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst
old_notebooks/: StructuralFeatures_test_pncA.ipynb  StructuralFeatures_tests_RNAP.ipynb  freesasa_andSNAP2_examples.ipynb  freesasa_tests_RNAP.ipynb  mdanalysis-tests-RNAP.ipynb  mdanalysis-tests-pncA.ipynb
sbmlcore/: AminoAcidProperties.py  CommandLineToolProperties.py  DeepDDG.py  ExternalCode.py  FeaturesDataFrame.py  Misc.py  RaSP.py  ResidueDepth.py  StructuralDistances.py  TempFactors.py  TrajectoryDihedrals.py  TrajectoryDistances.py  __init__.py
sbmlcore/data/: rogov-nekrasov-matrix.txt  rogov-nekrasov-matrix.txt~  rogov.csv  rogov.csv~
tests/: .gitignore  3fre_added_traj_angles.csv  3fre_added_traj_distances.csv  3fre_traj_angles.csv  3pl1-bad.ddg  3pl1-chainA.csv  3pl1-complete.csv  3pl1-stride.txt  3pl1.ddg  3pl1.fasta  5uh6-chainA.csv  5uh6-chainC.csv  5uh6-chainD.csv  5uh6-chainE.csv  5uh6-chainF.csv  5uh6-complete.csv  5uh6-protein-chains.ddg  5uh6.fasta  5uh6_added_traj_angles.csv  5uh6_added_traj_distances.csv  5uh6_traj_angles.csv  5uh6_traj_distances.csv  __init__.py  cavity_pred_3PL1_A.csv  dhfr-3fre-tmp-1-1.gro  dhfr-3fre-tmp-1-2-nojump-skip100.xtc  test_MDAnalysis.py  test_MW.py  test_Pi.py  test_aminoacidvolumechange.py  test_deep_ddg.py  test_dihedrals.csv  test_dssp.py  test_freesasa.py  test_hydropathy.py  test_rasp.py  test_residuedepth.py  test_rogov.py  test_snap2.py  test_stride.py  (+5 more)
