[metadata]
name = sbmlcore
version = 0.1.0
author = Philip W Fowler and Charlotte I Lynch and Dylan Adlard
author_email = philip.fowler@ndm.ox.ac.uk
description = Constructs core features table for the application to machine learning models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fowler-lab/sbmlcore
classifiers =
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
license = MIT
license_file = LICENSE.md
project_urls =
    Documentation = https://github.com/fowler-lab/sbmlcore
    CI = https://github.com/fowler-lab/sbmlcore/actions
    Source = https://github.com/fowler-lab/sbmlcore
    Tracker = https://github.com/fowler-lab/sbmlcore/issues

[options]
package_dir = 
packages = find:
python_requires = >=3.6